data/derived/fa15/progs/unify/prog2652.ml.out
Characters 368-372:
  | Ceiling e' -> ceil(eval (e'))
                            ^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
